<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.sashmish.piramid.holographicalpiramid.PiramidActivity"
    android:columnCount="3"
    android:rowCount="4"
    android:orientation="vertical"
    android:id="@+id/piramidLayout">

    <ImageView
        android:id="@+id/imageView0"
        android:layout_row="0"
        android:layout_column="1"
        android:contentDescription="@string/empty" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/imageAltText" />

    <ImageView
        android:id="@+id/cross"
        android:src="@drawable/system_cross"
        android:layout_row="2"
        android:layout_column="1"
        android:contentDescription="@string/cross"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_row="2"
        android:layout_column="0"
        android:rotation="270"
        android:contentDescription="@string/imageAltText"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_row="2"
        android:layout_column="2"
        android:rotation="90"
        android:contentDescription="@string/imageAltText"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_row="3"
        android:layout_column="1"
        android:rotation="180"
        android:contentDescription="@string/imageAltText"
        android:baselineAlignBottom="false" />
</GridLayout>
